--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.7.0"
   },
   "devDependencies": {
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.0.0-next.b2fd8db8"
   },
   "scripts": {
     "start": "react-scripts start",
